<resources>
    <string name="app_name">PARANote</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>

    <string name="title">Tytuł</string>
    <string name="content">Treść</string>
    <string name="save">Zapisz</string>
    <string name="ok">Ok</string>
    <string name="lack">Brak</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="title_activity_label">LabelActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search">Szukaj</string>
    <string name="cancel">Anuluj</string>
    <string name="add_label">Dodaj etykietę</string>

    <string name="text">Tekst</string>
    <string name="photo">Zdjęcie</string>
    <string name="list">Lista</string>

    <string name="add_reminder">Dodaj przypomnienie</string>
    <string name="reminder">Przypomnienie</string>
    <string name="today">Dzisiaj</string>
    <string name="tomorrow">Jutro</string>
    <string name="week">Za tydzień</string>
    <string name="month">Za miesiąc</string>
    <string name="another_date">Inna data</string>
    <string name="choose_time">Wybierz godzinę</string>
    <string name="not_repeat">Nie powtarzaj</string>
    <string name="daily">Codziennie</string>
    <string name="weekly">Co tydzień</string>
    <string name="monthly">Co miesiąc</string>
    <string name="workings_days">W dni robocze</string>
    <string name="another_reapiting">Inne</string>
    <string name="without_end_date">Bez daty zakończenia</string>
    <string name="set_date">Ustaw datę</string>
    <string name="not_set">Nie ustawiono</string>
    <string name="add_element">Dodaj element</string>

    <string name="date">Data</string>
    <string name="hour">Godzina</string>
    <string name="repetition">Powtarzanie</string>
    <string name="end_date">Data końcowa</string>
    <string name="repetition_2">Powtórzenie</string>

    <string name="monday_abbr">Pon</string>
    <string name="tuesday_abbr">Wt</string>
    <string name="wednesday_abbr">Śr</string>
    <string name="thursday_abbr">Czw</string>
    <string name="friday_abbr">Pt</string>
    <string name="saturday_abbr">Sob</string>
    <string name="sunday_abbr">Nied</string>

    <string-array name="days_of_the_week_abbr">
        <item>@string/monday_abbr</item>
        <item>@string/tuesday_abbr</item>
        <item>@string/wednesday_abbr</item>
        <item>@string/thursday_abbr</item>
        <item>@string/friday_abbr</item>
        <item>@string/saturday_abbr</item>
        <item>@string/sunday_abbr</item>
    </string-array>

    <string name="last_day">Ostatni dzień</string>

    <!-- KOMUNIKATY -->
    <string name="success_save_note">Pomyślnie zapisano notatkę</string>
    <string name="failed_save_note">Zapisywanie notatki nie udało się</string>
    <string name="empty_field">To pole nie może być puste</string>
    <string name="success_update_note">Pomyślnie zaktualizowano notatkę</string>
    <string name="failed_update_note">Aktualizacja notatki nie udała się</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_note">NoteActivity</string>

</resources>
