<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/weekly_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly"
            android:checked="true"/>
        <RadioButton android:id="@+id/monthly_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monthly"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <GridView android:id="@+id/days_grid_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"
            android:gravity="center"
            android:layout_margin="@dimen/margin"
            android:stretchMode="columnWidth"

            />
        <com.parabits.paranote.views.SelectableButton
            android:id="@+id/last_day_button"
            android:theme="@style/SelectableButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_day"
            android:padding="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            />
    </LinearLayout>

</LinearLayout>